fix the approval layout on smaller screens

--- a/shared/styles/uniswap.scss
+++ b/shared/styles/uniswap.scss
@@ -527,8 +527,6 @@
       border: 1px solid transparent;
       text-decoration: none;
       display: flex;
-      -webkit-box-pack: center;
-      justify-content: center;
       flex-wrap: nowrap;
       -webkit-box-align: center;
       align-items: center;
